--- a/packages/tdd/package.json
+++ b/packages/tdd/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "test-driven-development",
+  "name": "@react-testing-libary/tdd",
   "version": "1.0.0",
   "main": "dist/index.js",
   "license": "MIT",
+  "files": [
+    "src"
+  ],
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
@@ -17,7 +20,7 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
-    "@types/jest": "^29.5.1",
+    "@types/jest": "^29.5.5",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.10",
